# cloudgoat

./: .gitignore  AWS DFIR.pptx  Dockerfile  LICENSE  README.md  cloudgoat.py  cloudgoatnotes.sh  deploy.py  docker_stack.yml  extract_creds.py  kill.sh  pyproject.toml  requirements.txt  start.sh  vaultdeploy.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bridgecrew.yaml  docker-image.yml  docker-terraform-compatibility.yaml  finish-release.yml  release.yml  scenario-terraform-compatibility.yaml  terraform-compatibility.yml  test.yaml
cloudgoat/: cloudgoat.py
core/python/: commands.py  requirements.txt  tests.py  utils.py
keys/: pgp_options
scenarios/RDS_Snapshot/: README.md
scenarios/beanstalk_secrets/: README.md  cheat_sheet.md
scenarios/cicd/: README.md  cheat_sheet.md  manifest.yml
scenarios/cloud_breach_s3/: README.md  cheat_sheet.md  manifest.yml
scenarios/codebuild_secrets/: README.md  cheat_sheet_calrissian.md  cheat_sheet_solo.md
scenarios/detection_evasion/: README.md  cheat_sheet.md  manifest.yml
scenarios/ec2_ssrf/: README.md  cheat_sheet_solus.md  manifest.yml
scenarios/ecs_efs_attack/: README.md  cheat_sheet.md  ec2.tf  ecs.tf  manifest.yml
scenarios/ecs_privesc_evade_protection/: README.md  cheat_sheet.md  manifest.yml
scenarios/ecs_takeover/: README.md  cheat_sheet.md  ecs.tf  manifest.yml
scenarios/efs_mount/: manifest.yml
scenarios/glue_privesc/: README.md  cheat_sheet.md  manifest.yml  start.sh
scenarios/iam_privesc_by_attachment/: README.md  cheat_sheet_kerrigan.md  manifest.yml
scenarios/iam_privesc_by_ec2/: README.md  cheat_sheet_dev_user.md  manifest.yml
scenarios/iam_privesc_by_key_rotation/: README.md  cheat_sheet.md  manifest.yml
scenarios/iam_privesc_by_rollback/: README.md  cheat_sheet_raynor.md  manifest.yml
scenarios/lambda_injection_privesc/: README.md  cheat_sheet.md  manifest.yml
scenarios/lambda_privesc/: README.md  cheat_sheet_chris.md  manifest.yml
terraform/: .gitignore  administrator.tf  bob.tf  bob1.tf  bob2.tf  bob3.tf  bob4.tf  bob5.tf  bob6.tf  cloudtrail.tf  codebuild.tf  ebs.tf  ec2.tf  elb.tf  glue.tf  guardduty.tf  iam_user_policies.tf  iam_users.tf  joe.tf  joe1.tf  joe2.tf  joe3.tf  joe4.tf  joe5.tf  joe6.tf  lambda.tf  lambda1.tf  lambda2.tf  lightsail.tf  misc-iam.tf  s3.tf  terraform.tf  terraform.tfvars  user1.tf  user2.tf  user3.tf  user4.tf  user5.tf  variables.tf  vpc.tf
(+749 files in other folders)
