[tool.poetry]
name = "cloudgoat"
version = "2.0.0"
description = "A vulnerable AWS environment generator for pentesters"
authors = ["RhinoSecurityLabs"]
readme = "README.md"
packages = [{include = "cloudgoat"}]

[tool.poetry.dependencies]
python = "^3.8"
argcomplete = "~3.2.3"
PyYAML = "~6.0.1"
boto3 = "~1.34.77"
requests = "~2.32.2"
sqlite-utils = "~3.36"
typed-ast = { version = "*", markers = "python_version < '3.9'", optional = true }

[tool.poetry.scripts]
cloudgoat = "cloudgoat.cloudgoat:main"

[tool.poetry.group.dev.dependencies]
black = "19.3b0"
flake8 = "3.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
