[project]
name = "cloudgoat"
version = "2.5.0"
description = "A vulnerable AWS environment generator for Pentesters."
authors = [{ name = "RhinoSecurityLabs" }]
readme = "README.md"
requires-python = ">=3.12,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "argcomplete~=3.6.0",
    "PyYAML~=6.0.2",
    "boto3>=1.37.11,<1.43.0",
    "requests~=2.32.3",
    "sqlite-utils>=3.38,<3.39",
    "typed-ast ; python_version < '3.12'",
]


[dependency-groups]
dev = [
    "black==25.11.0",
    "flake8==7.3.0",
    "pytest>=8.4.2",
]


[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"


[project.scripts]
cloudgoat = "cloudgoat.cloudgoat:main"


[tool.uv]
default-groups = "all"


[tool.uv.build-backend]
module-name = ["cloudgoat"]
module-root = ""
